--- a/styles/common.less
+++ b/styles/common.less
@@ -1,38 +1,46 @@
-.translate(@value){
+.transition(@value){
     -webkit-transition: @value;
     -moz-transition: @value;
     -ms-transition: @value;
     transition: @value;
 }
 
+.transform(@value){
+    -webkit-transform: @value;
+    -moz-transform: @value;
+    -ms-transform: @value;
+    transform: @value;
+}
+
 @black: #202020;
-@appBorder: 40px;
+@topBorder: 40px;
+@border: 20px;
 
 
 body{
     padding: 0;
     margin: 0;
+    -webkit-font-smoothing: antialiased;
 }
 
 [ui-view="main"]{
 
     background: #EEE;
 
-    left: @appBorder;
-    right: @appBorder;
-    top: @appBorder;
-    bottom: @appBorder;
+    left: @border;
+    right: @border;
+    top: @topBorder;
+    bottom: @border;
 
     position: absolute;
     overflow: hidden;
-
 }
 
 menu.mainMenu{
 
     padding: 0;
     margin: 0;
-    height: @appBorder;
+    height: @topBorder;
     text-align: center;
 
     tab{
@@ -55,7 +63,7 @@ menu.lang{
     top: 0;
     right: 40px;
     width: 75px;
-    height: @appBorder;
+    height: @topBorder;
 
 
 }
