--- a/styles/atelier.less
+++ b/styles/atelier.less
@@ -4,16 +4,54 @@
     height: 100%;
     width: 100%;
 
+    timeline{
+
+        position: absolute;
+        opacity: .5;
+        height: 100%;
+        width: 50px;
+        left: 0;
+        top: 0;
+        overflow: hidden;
+        z-index: 15;
+        cursor: -webkit-grab;
+        .pointsContainer{
+            position:absolute;
+            width: 100%;
+            height: 100%;
+
+            .point{
+                position: relative;
+                margin: 10px auto;
+                height: 3px;
+                width: 3px;
+                background-color: @beige;
+                border-radius: 100%;
+
+                &.big{
+                    height: 10px;
+                    width: 10px;
+                }
+            }
+        }
+    }
+
     div.background{
-        position: position;
+        position: absolute;
         top: 0;
         left: 0;
         height: 100%;
         width: 100%;
         z-index: 0;
 
-        img{
-            opacity: .1;
+        .transform(scale(1.05));
+        opacity: 0;
+        .transition(.7s cubic-bezier(.17,.67,.38,.99));
+
+        &.active{
+            .transform(scale(1));
+            opacity: .15;
+            .transition(5s cubic-bezier(.17,.67,.38,.99) 1.5s);
         }
     }
 
@@ -39,11 +77,15 @@
         .title{
             font-family: 'Pistilli';
             font-size: 10rem;
+            margin: 0;
+            margin-bottom: 50px;
             font-weight: normal;
+            color: @beige;
         }
 
         .baseline{
             font-family: 'Montserrat';
+            color: @gray;
             text-transform: uppercase;
             font-size: .8rem;
             font-weight: bold;
