--- a/styles/atelier.less
+++ b/styles/atelier.less
@@ -19,6 +19,7 @@
             position:absolute;
             width: 100%;
             height: 100%;
+            will-change: transform;
 
             .point{
                 position: relative;
@@ -26,11 +27,11 @@
                 height: 3px;
                 width: 3px;
                 background-color: @beige;
-                border-radius: 100%;
-
+                border-radius: 100px;
+                will-change: transform height width;
                 &.big{
-                    height: 10px;
-                    width: 10px;
+                    height: 5px;
+                    width: 5px;
                 }
             }
         }
