--- a/styles/main.less
+++ b/styles/main.less
@@ -1,3 +1,8 @@
 @import 'fonts.less';
+// Directives style
+@import 'textClip.less';
+@import 'timeline.less';
+
 @import 'common.less';
 @import 'atelier.less';
+@import 'galerie.less';
