--- a/common/directives/partials/textClip.html
+++ b/common/directives/partials/textClip.html
@@ -1,34 +1,10 @@
-<style>
-    text-clip{
-        position: absolute;
-        height: 300px;
-        z-index: 15;
-    }
-
-    text-clip svg.filledTitle {
-        position: fixed;
-        width: 100%;
-        font: 900 500%/1.2 'Baron', sans-serif;
-        top:0;
-    }
-
-    text-clip svg.filledTitle text {
-        fill: url(#background);
-    }
-
-    .grayscale{
-        filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
-        filter: gray; /* IE6-9 */
-        -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
-    }
-</style>
-<div style="padding-top: {{textSize}}px">
-	<svg class="filledTitle grayscale" style="font-size:{{textSize}}px;height:{{textSize}}px;">
+<div>
+	<svg class="filledTitle" style="font-size:{{textSize}}px; height:{{textSize}}px; width:100%;">
 		<defs>
-			<pattern id="background" patternUnits="userSpaceOnUse" width="900" height="600" >
-				<image xlink:href="{{imageUrl}}" width="900" height="600" top="0" left="0" />
+			<pattern id="background" patternUnits="userSpaceOnUse" width="1280" height="800" >
+				<image xlink:href="{{imageUrl}}" width="1280" height="800" top="0" left="0" style="margin:0;padding:0;" />
 			</pattern>
 		</defs>
-		<text y="{{textSize - 10}}"  x="50%" text-anchor="middle">{{content}}</text>
+		<text class="clip" ng-y="textSize - 10"x="50%" text-anchor="middle">{{content}}</text>
 	</svg>
 </div>
