--- a/styles/atelier.less
+++ b/styles/atelier.less
@@ -1,41 +1,7 @@
-.container{
+#atelierContainer{
 
-    position: relative;
-    height: 100%;
-    width: 100%;
-
-    timeline{
-
-        position: absolute;
-        opacity: .5;
-        height: 100%;
-        width: 50px;
-        left: 0;
-        top: 0;
-        overflow: hidden;
-        z-index: 15;
-        cursor: -webkit-grab;
-        .pointsContainer{
-            position:absolute;
-            width: 100%;
-            height: 100%;
-            will-change: transform;
-
-            .point{
-                position: relative;
-                margin: 10px auto;
-                height: 3px;
-                width: 3px;
-                background-color: @beige;
-                border-radius: 100px;
-                will-change: transform height width;
-                &.big{
-                    height: 5px;
-                    width: 5px;
-                }
-            }
-        }
-    }
+    background-color: @black;
+    color: white;
 
     div.background{
         position: absolute;
@@ -51,7 +17,7 @@
 
         &.active{
             .transform(scale(1));
-            opacity: .15;
+            opacity: .22;
             .transition(5s cubic-bezier(.17,.67,.38,.99) 1.5s);
         }
     }
@@ -115,6 +81,7 @@
 
         text-align: center;
         z-index: 1;
+        cursor: -webkit-grab;
 
 
         .transform(translateX(-50%));
