--- a/styles/atelier.less
+++ b/styles/atelier.less
@@ -27,7 +27,7 @@
         left: 50px;
         top: 50%;
         width: 100px;
-        font-family: 'Montserrat';
+        font-family: @subtitle;
 
         .date{
             color: @saumon;
@@ -87,7 +87,7 @@
         .transform(translateX(-50%));
 
         .title{
-            font-family: 'Pistilli';
+            font-family: @title;
             font-size: 10rem;
             margin: 0;
             margin-bottom: 50px;
@@ -96,7 +96,7 @@
         }
 
         .baseline{
-            font-family: 'Montserrat';
+            font-family: @subtitle;
             color: @gray;
             text-transform: uppercase;
             font-size: .8rem;
