Add English / French

--- a/styles/galerie.less
+++ b/styles/galerie.less
@@ -14,8 +14,9 @@
 
             position: relative;
 
-            .transition(1s ease);
-
+            &.ng-enter, &.ng-leave{
+                .transition(1s ease);
+            }
             &.ng-enter{
                 .transform(translateY(1000px));
                 opacity: 0;
@@ -119,7 +120,27 @@
                 }
             }
         }
-
-
     }
+}
+
+#singleContainer{
+
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+    .infos{
+        position: absolute;
+        width: 300px;
+        top: 50px;
+        right: 50px;
+        background-color: rgba(0,0,0,.5);
+
+        h1{
+            font-family: @title;
+        }
+
+        
+    }
+
 }
