--- a/styles/main.less
+++ b/styles/main.less
@@ -7,3 +7,6 @@
 @import 'atelier.less';
 @import 'galerie.less';
     @import 'single.less';
+
+@import 'savoirfaire.less';
+    @import 'savoir.less';
