--- a/styles/common.less
+++ b/styles/common.less
@@ -20,11 +20,13 @@
 }
 
 // Colors
-@black: #202020;
+@black: #262626;
+@opaqueBlack: rgba(0,0,0,.8);
 @gray: #474747;
-@beige: #d3c6b4;
+@beige: #e6dcd1;
 @white: #E0D5C4;
 @saumon: #ce7259;
+@darkSaumon: #d5472e;
 // sizes
 @border: 15px;
 @topBorder: 40px;
@@ -56,6 +58,52 @@ body {
     }
 }
 
+::-webkit-scrollbar {
+    height: 7px;
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: @saumon;
+}
+
+
+
+button{
+    height: 45px;
+    width: 200px;
+    margin: 0;
+
+    background-color: @black;
+    text-align: center;
+    color: #fff;
+    line-height: 40px;
+    font-family: @subtitle;
+    font-size: 11px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
+    outline: none;
+    border: none;
+    cursor: pointer;
+
+
+
+    .transition(.2s ease);
+
+    &:hover{
+        background-color: @saumon;
+    }
+
+    &:active{
+        background-color: @darkSaumon;
+    }
+}
+
 .grayscale{
   	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: gray; /* IE6-9 */
@@ -67,6 +115,20 @@ body {
     width: 50px;
     margin: 50px 0;
     background: url("../assets/images/zigouigoui.svg") no-repeat;
+}
+
+.arrowLeft{
+    height: 50px;
+    width: 30px;
+    background: url("../assets/images/arrowleft.svg") no-repeat;
+    cursor: pointer;
+}
+
+.arrowRight{
+    height: 50px;
+    width: 30px;
+    background: url("../assets/images/arrowright.svg") no-repeat;
+    cursor: pointer;
 }
 
 div.border {
@@ -122,7 +184,7 @@ div.border {
     padding: @border;
     padding-top: @topBorder;
 
-    background-color: #eee;
+    background-color: @beige;
 }
 menu {
     z-index: 10;
@@ -131,6 +193,8 @@ menu {
     font-size: 13px;
     font-weight: bold;
     color: @gray;
+
+    cursor: pointer;
 
     &.mainMenu {
         position: relative;
