--- a/styles/main.less
+++ b/styles/main.less
@@ -2,11 +2,18 @@
 // Directives style
 @import 'textClip.less';
 @import 'timeline.less';
+@import 'slider.less';
+@import 'arrows.less';
 
 @import 'common.less';
+
 @import 'atelier.less';
+
 @import 'galerie.less';
     @import 'single.less';
 
 @import 'savoirfaire.less';
     @import 'savoir.less';
+
+@import 'formation.less';
+    @import 'openedFormation.less';
