--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -7,5 +7,5 @@ font-weight: normal;
 @font-face {
 font-family: 'Montserrat';
 src: url('../assets/fonts/Montserrat-Light.otf') format('truetype');
-font-weight: normal;
+font-weight: 300;
 }
