--- a/styles/galerie.less
+++ b/styles/galerie.less
@@ -65,6 +65,7 @@
 
             position: relative;
             background-color: @black;
+            cursor: pointer;
 
             &:nth-child(odd){
                 height: 35%;
@@ -111,6 +112,9 @@
                     position: absolute;
                     bottom: 60px;
                     width: 100%;
+                    padding: 10px;
+                    box-sizing: border-box;
+
                     text-align: center;
                     font-family: @title;
                     color: @beige;
@@ -124,10 +128,14 @@
                     position: absolute;
                     bottom: 20px;
                     width: 100%;
+                    padding: 10px;
+                    box-sizing: border-box;
+
                     text-align: center;
                     font-family: @subtitle;
                     color: @white;
                     opacity: 0;
+                    
                     .transform(translateY(50px));
                     .transition(.2s @easeIn .2s);
                 }
