--- a/styles/common.less
+++ b/styles/common.less
@@ -220,9 +220,15 @@ menu {
         text-align: right;
         position: absolute;
         top: 0;
-        right: 40px;
+        right: 20px;
         width: 75px;
         height: @border;
+
+        tab{
+            &.currentLang{
+                color: @saumon;
+            }
+        }
     }
 }
 
