--- a/styles/common.less
+++ b/styles/common.less
@@ -23,6 +23,9 @@
 @black: #262626;
 @opaqueBlack: rgba(0,0,0,.8);
 @gray: #515151;
+@grey-light: #888888;
+@grey-dark: #444444;
+@grey-black : #0c0c0c;
 @beige: #e6dcd1;
 @white: #E0D5C4;
 @saumon: #ce7259;
@@ -71,7 +74,16 @@ body {
   background-color: @saumon;
 }
 
-
+// BUTTONS
+.btn-black {
+    color: white;
+    max-width: 200px;
+    letter-spacing: 1px;
+    border-radius: 2px;
+    padding: 15px 0;
+    text-transform: uppercase;
+    background: url('../assets/images/texture-btn-black.png') black;
+}
 
 button{
     height: 45px;
@@ -245,4 +257,29 @@ menu {
         position: absolute;
         z-index: -1;
     }
+}
+
+// TITLES
+
+h1, h2, h3, h4, h5 {
+    margin: 0;
+}
+.firstTitle {
+    color: @grey-light;
+    text-align: center;
+    font-family: @subtitle;
+    font-weight: 700;
+    font-size: .7rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+
+// BACKGROUND
+.bgBeige {
+    background: url('../assets/images/bg-beige.jpg') no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    width: 100%;
+    height: 100%;
 }
