--- a/styles/main.less
+++ b/styles/main.less
@@ -8,6 +8,7 @@
 @import 'common.less';
 
 @import 'atelier.less';
+    @import 'clients.less';
 
 @import 'galerie.less';
     @import 'single.less';
