--- a/styles/savoirfaire.less
+++ b/styles/savoirfaire.less
@@ -8,20 +8,14 @@
         width: 100%;
         z-index: 0;
 
-        background-color: @black;
+        background-color: #161616;
 
         img{
-            opacity: 0;
-        }
-
-        &.active img{
-            opacity: .4;
-            .transition(4s ease);
+            opacity: .25;
         }
     }
 
-    .center{
-
+    .center {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -31,47 +25,95 @@
 
         text-align: center;
 
-        .transition(.5s ease);
-        opacity: 1;
-        &.hidden{
-            opacity: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        header{
+            margin-top: 100px;
+            .transition(.3s ease);
+            &.hidden{
+                opacity: 0;
+            }
+
+            h1{
+                color: @beige;
+                font-family: @subtitle;
+                font-weight: bold;
+                font-size: 13px;
+                letter-spacing: 5px;
+                text-transform: uppercase;
+            }
+            .fioriture{
+                margin: 50px auto 0;
+            }
         }
 
-        h2{
-            margin: 100px 0 50px 0;
+        .Lists{
+            position: relative;
+            height: 400px;
+            width: 100%;
+        }
+    }
+
+    .Left{
+        position: absolute;
+        right: 55%;
+        text-align: right;
+    }
+
+    .Right{
+        position: absolute;
+        left: 55%;
+        text-align: left;
+    }
+
+    .Left, .Right{
+
+        &-title{
+            font-family: @title;
+            font-size: 2.5rem;
             color: @beige;
+            font-weight: normal;
+        }
+
+        &-list{
+
             font-family: @subtitle;
-            font-weight: bold;
-            font-size: 13px;
-            letter-spacing: 5px;
-            text-transform: uppercase;
-        }
+            font-weight: 300;
+            color: @lightGray;
+            font-size: 1rem;
 
-        .fioriture{
-            margin: 0 auto;
-        }
+            &-item{
 
-        .savoir-list{
+                margin: 10px 0;
+                cursor: pointer;
 
-            width: 660px;
-            max-width: 100%;
-            margin: 50px auto;
+                h4{
+                    display: inline-block;
+                    margin: 10px;
+                    text-transform: lowercase;
+                    .transition(.2s ease);
 
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            flex-wrap: wrap;
+                    &::first-letter{
+                        text-transform: uppercase;
+                    }
 
+                    &:hover{
+                        color: @saumon;
+                    }
 
-            .savoir{
-                display: block;
-                height: 50px;
-                line-height: 50px;
-                font-size: 11px;
-                letter-spacing: 2px;
-                font-weight: 400;
-                width: 300px;
-                margin: 15px auto;
+                    &:active{
+                        color: @darkSaumon;
+                    }
+                }
+
+                span{
+                    font-family: @title;
+                    color: @saumon;
+                    font-size: 1.2rem;
+                }
             }
         }
     }
