--- a/styles/single.less
+++ b/styles/single.less
@@ -22,6 +22,7 @@
             h1{
                 color: @saumon;
                 font-family: @title;
+                font-weight: normal;
                 font-size: 1.5rem;
             }
 
