--- a/styles/contact.less
+++ b/styles/contact.less
@@ -67,13 +67,13 @@
 		width: 280px;
 		padding-left: 40px;
 	}
-	.address {
+	h2.address {
 		color: @saumon;
 		font-family: @subtitle;
 		font-weight: lighter;
 		font-size: 1.4rem;
 		line-height: 2rem;
-		padding: 30px 0 30px 40px;
+		padding: 20px 0 20px 40px;
 	}
 
 	h4 {
@@ -86,14 +86,23 @@
 		&:nth-child(6) {
 			padding-left: 118px;
 		}
+		&:nth-child(8) {
+			padding-left: 99px;
+		}
 
 		span {
 			font-weight: 100;
 		}
 
-		span:nth-child(2) {
-			display: block;
-			padding-left: 60px;
-		}
 	}
+
+	img {
+		position: absolute;
+		margin: 0 0 -5px 5px;
+	}
+
+	.metro2, .metro7 {
+		margin-left: 40px;
+	}
+
 }
