--- a/styles/common.less
+++ b/styles/common.less
@@ -77,18 +77,10 @@ body {
   background-color: @saumon;
 }
 
-// BUTTONS
-.btn-black {
-    color: white;
-    max-width: 200px;
-    letter-spacing: 1px;
-    border-radius: 2px;
-    padding: 15px 0;
-    text-transform: uppercase;
-    background: url('../assets/images/texture-btn-black.png') black;
-}
+
 
 button{
+    position: relative;
     height: 45px;
     width: 250px;
     margin: 0;
@@ -118,6 +110,17 @@ button{
 
     &:active{
         background-color: @darkSaumon;
+    }
+
+    &::after {
+        content: "";
+        background: url('../assets/images/texture-btn-black.png');
+        opacity: 0.3;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
     }
 }
 
