--- a/styles/atelier.less
+++ b/styles/atelier.less
@@ -14,7 +14,7 @@
 
     .transition(1s ease);
 
-    div.background{
+    div.slideBackground{
         position: absolute;
         top: 0;
         left: 0;
@@ -125,7 +125,7 @@
 
         .baseline{
             flex: 5;
-            margin: 0 20px;
+            margin: 10px 20px;
             box-sizing: border-box;
 
             font-family: @title;
@@ -297,7 +297,7 @@
 
             .flexContainer{
                 flex-direction:row-reverse;
-                align-items: center;
+                align-items: flex-start;
             }
 
             .baseline{
