--- a/styles/savoir.less
+++ b/styles/savoir.less
@@ -50,8 +50,8 @@
             h2{
                 margin: 3rem 0;
                 font-family: @subtitle;
-                font-weight: normal;
-                font-size: 1.5rem;
+                font-weight: bold;
+                font-size: 1.2rem;
                 color: @saumon;
             }
 
@@ -60,6 +60,7 @@
                 font-size: 1rem;
                 line-height: 1.5rem;
                 font-family: @paragraph;
+                font-weight: lighter;
                 font-size: .9rem;
             }
 
