--- a/styles/savoirfaire.less
+++ b/styles/savoirfaire.less
@@ -41,8 +41,8 @@
                 color: @beige;
                 font-family: @subtitle;
                 font-weight: bold;
-                font-size: 13px;
-                letter-spacing: 5px;
+                font-size: .7rem;
+                letter-spacing: 3px;
                 text-transform: uppercase;
             }
             .fioriture{
@@ -94,6 +94,7 @@
                     display: inline-block;
                     margin: 10px;
                     text-transform: lowercase;
+                    font-weight: normal;
                     .transition(.2s ease);
 
                     &::first-letter{
