--- a/styles/formation.less
+++ b/styles/formation.less
@@ -8,10 +8,6 @@
         background-color: @black;
 
         z-index: -1;
-
-        img{
-            opacity: .9;
-        }
     }
 
     .center {
@@ -40,8 +36,8 @@
                 color: @beige;
                 font-family: @subtitle;
                 font-weight: bold;
-                font-size: 13px;
-                letter-spacing: 5px;
+                font-size: .7rem;
+                letter-spacing: 3px;
                 text-transform: uppercase;
             }
             .fioriture{
@@ -93,6 +89,7 @@
                     display: inline-block;
                     margin: 10px;
                     text-transform: lowercase;
+                    font-weight: normal;
                     .transition(.2s ease);
 
                     &::first-letter{
