--- a/styles/home.less
+++ b/styles/home.less
@@ -42,8 +42,8 @@
                 color: @beige;
                 font-family: @subtitle;
                 font-weight: bold;
-                font-size: 13px;
-                letter-spacing: 5px;
+                font-size: .7rem;
+                letter-spacing: 3px;
                 text-transform: uppercase;
             }
             .fioriture{
