--- a/styles/openedFormation.less
+++ b/styles/openedFormation.less
@@ -43,9 +43,9 @@
 
             h1{
                 color: @saumon;
-                font-family: @title;
-                font-weight: normal;
-                font-size: 2.5rem;
+                font-family: @subtitle;
+                font-weight: bold;
+                font-size: 1.2rem;
             }
 
             p{
