--- a/styles/atelier.less
+++ b/styles/atelier.less
@@ -238,7 +238,6 @@
     .center{
 
         &.beige{
-            color: @black;
 
             .baseline{
                 color: @saumon;
@@ -292,7 +291,7 @@
             }
         }
 
-        &.rencontre{
+        &.fr.rencontre{
             width: 535px;
         }
 
