--- a/styles/galerie.less
+++ b/styles/galerie.less
@@ -108,11 +108,14 @@
 
                 .transition(.4s ease);
 
-                h2 {
+                .text{
                     position: absolute;
-                    bottom: 60px;
+                    bottom: 10px;
+                }
+
+                h2 {
                     width: 100%;
-                    padding: 10px;
+                    padding: 0 10px;
                     box-sizing: border-box;
 
                     text-align: center;
@@ -125,17 +128,15 @@
                 }
 
                 p {
-                    position: absolute;
-                    bottom: 20px;
                     width: 100%;
-                    padding: 10px;
+                    padding: 0 10px;
                     box-sizing: border-box;
 
                     text-align: center;
                     font-family: @subtitle;
                     color: @white;
                     opacity: 0;
-                    
+
                     .transform(translateY(50px));
                     .transition(.2s @easeIn .2s);
                 }
